@@ -42,7 +42,8 @@ namespace scheme {
     bool fileExistsP(const ucs4string& path);
     bool fileWritableP(const ucs4string& path);
     bool fileReadableP(const ucs4string& path);
-    ucs4string utf8ToUcs4(const char* s, int len);
+    ucs4string utf8ToUtf32(const char* s, int len);
+    ByteVector* utf32toUtf8(const ucs4string& s);
     ucs4char* getEnv(const ucs4string& key);
     Object getEnvAlist();
     ucs4string stringError(int num);
